fixed and error that made single products overlap

--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -465,6 +465,7 @@ form{
 
   .social_buttons{
     display: flex;
+    padding-top: 30px;
     justify-content: center;
     position: relative;
     left: 600px;
