--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -672,6 +672,7 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding-top: 30px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
